welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:6: error: type mismatch;
 found   : Unit
 required: String
  	if(day==6){
        ^alarmClock:10: error: return outside method definition
  return "7:00"
  ^